tests/baselines/reference/throwType_function_parameter.errors.txt
tests/cases/compiler/throwType_function_parameter.ts(4,24): error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
tests/cases/compiler/throwType_function_parameter.ts(4,24): error TS2796: Type instantiated results in a throw type saying: 
    No zero
tests/cases/compiler/throwType_function_parameter.ts(7,62): error TS2793: Template literal type argument 'any' is not literal type or a generic type.
tests/cases/compiler/throwType_function_parameter.ts(7,69): error TS2693: 'T' only refers to a type, but is being used as a value here.
tests/cases/compiler/throwType_function_parameter.ts(8,63): error TS2793: Template literal type argument 'any' is not literal type or a generic type.
tests/cases/compiler/throwType_function_parameter.ts(8,70): error TS2693: 'T' only refers to a type, but is being used as a value here.


==== tests/cases/compiler/throwType_function_parameter.ts (6 errors) ====
    function checkParameterPosition<T extends number>(y: T extends 1234 ? throw 'No zero' : T) {
        y.toExponential()
    }
    checkParameterPosition(1234)
                           ~~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
                           ~~~~
!!! error TS2796: Type instantiated results in a throw type saying: 
!!! error TS2796:     No zero
    checkParameterPosition(12345678)
    
    type MustNumber<T> = T extends number ? T : throw `"found "${typeof T}"`
                                                                 ~~~~~~~~
!!! error TS2793: Template literal type argument 'any' is not literal type or a generic type.
                                                                        ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.
    type MustNumber2<T> = T extends number ? T : throw `"found "${typeof T}"`
                                                                  ~~~~~~~~
!!! error TS2793: Template literal type argument 'any' is not literal type or a generic type.
                                                                         ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.
    function f2<T>(a: MustNumber<T>, b: MustNumber2<T>) {
        a = b
    }
    